--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -18,6 +18,7 @@ html {
 body {
   box-sizing: border-box;
   font-size: 1.6rem;
+  font-family: "Poppins";
 }
 
 #bg {
@@ -109,6 +110,8 @@ body {
 }
 .form__button {
   font-family: "Vermin Vibes";
+  text-decoration: none;
+  color: #3c3f43;
   font-size: 2rem;
   background: #c4c4c4;
   border-radius: 10px;
@@ -142,6 +145,34 @@ body {
   background-color: #f3f3f3;
   border-radius: 3px;
   cursor: pointer;
+}
+
+.modal {
+  padding: 1.5rem 3rem;
+  position: fixed;
+  background-color: #f3f3f3;
+  box-shadow: 2px 1px 3px rgba(0, 0, 0, 0.3);
+  transform: translate(-50%, 50%);
+  left: 50%;
+  top: 10%;
+  opacity: 1;
+  transition: all 250ms ease-out;
+  z-index: 10;
+}
+.modal__description {
+  padding: 2rem;
+  color: #b13957;
+}
+.modal__close {
+  position: absolute;
+  top: 7%;
+  right: 5%;
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.modal--hidden {
+  transform: translate(-50%, 10%);
+  opacity: 0;
 }
 
 @keyframes blink {
