--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -183,5 +183,44 @@ body {
     background-color: #b7b7b7;
   }
 }
+.board-wrapper {
+  background-color: rgba(112, 144, 192, 0.85);
+  width: 800px;
+  height: 515px;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  box-shadow: 1px 3px 12px 2px rgba(255, 255, 255, 0.3);
+}
+
+.board {
+  box-sizing: content-box;
+  background: #77a6de;
+  margin-left: 4rem;
+  display: grid;
+  grid-template-rows: repeat(10, 35.3px);
+  border: 2px solid #0081f8;
+}
+.board__row {
+  display: grid;
+  grid-template-columns: repeat(10, 34px);
+  border-bottom: 1.3px solid #0081f8;
+}
+.board__row:last-child {
+  border-bottom: 1.3px solid transparent;
+}
+.board__cell {
+  border-left: 1.3px solid #0081f8;
+  cursor: pointer;
+}
+.board__cell:hover {
+  background-color: #8cb3e3;
+}
+.board__cell:first-child {
+  border-left: 1.3px solid transparent;
+}
 
 /*# sourceMappingURL=styles.css.map */
