--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -8,6 +8,10 @@
 $color-light: #f3f3f3;
 $color-dark: #3c3f43;
 $color-warning: #b13957;
+$board-cell-size: 34px;
+$board-cell-border-width: 1.3px;
+$board-color-primary: #77a6de;
+$board-color-secondary: #0081f8;
 
 *,
 *::after,
@@ -212,5 +216,49 @@ body {
 
   to {
     background-color: lighten(#9b9b9b, 11%);
+  }
+}
+
+.board-wrapper {
+  background-color: rgb(112 144 192 / 85%);
+  width: 800px;
+  height: 515px;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  box-shadow: 1px 3px 12px 2px rgb(255 255 255 / 30%);
+}
+
+.board {
+  box-sizing: content-box;
+  background: $board-color-primary;
+  margin-left: 4rem;
+  display: grid;
+  grid-template-rows: repeat(10, $board-cell-size + $board-cell-border-width);
+  border: 2px solid $board-color-secondary;
+
+  &__row {
+    display: grid;
+    grid-template-columns: repeat(10, $board-cell-size);
+
+    border-bottom: $board-cell-border-width solid $board-color-secondary;
+    &:last-child {
+      border-bottom: $board-cell-border-width solid transparent;
+    }
+  }
+  &__cell {
+    border-left: $board-cell-border-width solid $board-color-secondary;
+    cursor: pointer;
+
+    &:hover {
+      background-color: lighten($board-color-primary, 5%);
+    }
+
+    &:first-child {
+      border-left: $board-cell-border-width solid transparent;
+    }
   }
 }
